Add EmailSender service to SendGrid

--- a/Sprint/Sprint/appsettings.json
+++ b/Sprint/Sprint/appsettings.json
@@ -9,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridUser": "Moist Gaming",
+  "SendGridKey": "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"
 }
