Update SendGrid key and sender

--- a/Sprint/Sprint/appsettings.json
+++ b/Sprint/Sprint/appsettings.json
@@ -11,5 +11,5 @@
   },
   "AllowedHosts": "*",
   "SendGridUser": "Moist Gaming",
-  "SendGridKey": "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"
+  "SendGridKey": "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"
 }
