--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,5 @@ steps:
      src\*.testsettings
     TargetFolder: '$(build.artifactstagingdirectory)'
   condition: succeededOrFailed()
+
+- task: PublishBuildArtifacts@1
